tests/baselines/reference/override2.errors.txt
tests/cases/conformance/override/override2.ts(13,14): error TS4113: This member must have an 'override' modifier because it overrides a member in the base class 'AB'.
tests/cases/conformance/override/override2.ts(17,14): error TS4115: This member cannot have an 'override' modifier because it is implemented an abstract method that declared in the base class 'AB'.
tests/cases/conformance/override/override2.ts(18,14): error TS4113: This member must have an 'override' modifier because it overrides a member in the base class 'AB'.
tests/cases/conformance/override/override2.ts(19,5): error TS4113: This member must have an 'override' modifier because it overrides a member in the base class 'AB'.
tests/cases/conformance/override/override2.ts(23,14): error TS4115: This member cannot have an 'override' modifier because it is implemented an abstract method that declared in the base class 'AB'.
tests/cases/conformance/override/override2.ts(24,14): error TS4115: This member cannot have an 'override' modifier because it is implemented an abstract method that declared in the base class 'AB'.
tests/cases/conformance/override/override2.ts(25,5): error TS4113: This member must have an 'override' modifier because it overrides a member in the base class 'AB'.


==== tests/cases/conformance/override/override2.ts (7 errors) ====
    abstract class AB {
        abstract foo(v: string): void;
    
        abstract bar(v: string): void;
        abstract baz(v: string): void;
    }
    
    abstract class AD1 extends AB {
    
    }
    
    abstract class AD2 extends AB {
        abstract foo(v: ''): void // need override?
                 ~~~
!!! error TS4113: This member must have an 'override' modifier because it overrides a member in the base class 'AB'.
    }
    
    abstract class AD3 extends AB {
        override foo(v: ''): void { } // need override?
                 ~~~
!!! error TS4115: This member cannot have an 'override' modifier because it is implemented an abstract method that declared in the base class 'AB'.
        abstract bar(): void;
                 ~~~
!!! error TS4113: This member must have an 'override' modifier because it overrides a member in the base class 'AB'.
        baz(): void { }
        ~~~
!!! error TS4113: This member must have an 'override' modifier because it overrides a member in the base class 'AB'.
    }
    
    class D4 extends AB {
        override foo(v: ''): void {}
                 ~~~
!!! error TS4115: This member cannot have an 'override' modifier because it is implemented an abstract method that declared in the base class 'AB'.
        override bar(v: ''): void {}
                 ~~~
!!! error TS4115: This member cannot have an 'override' modifier because it is implemented an abstract method that declared in the base class 'AB'.
        baz(): void { }
        ~~~
!!! error TS4113: This member must have an 'override' modifier because it overrides a member in the base class 'AB'.
    }